# CAN2CAN

./: .gitignore  .mxproject  CAN2CAN.ioc  CMakeLists.txt  CMakePresets.json  LICENSE.md  Makefile  README.md
Core/Inc/: FreeRTOSConfig.h  can.h  can2can.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: can.c  can2can_master.c  can2can_slave.c  freertos.c  main.c  stm32f1xx_it.c  usart.c
cmake/: gcc-arm-none-eabi.cmake
